Changed width column to avoid FPS from wrapping

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,7 @@ a {
 .w-900 {
   width: 900px;
 }
+
+.width-42{
+  width: 42%;
+}
